--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -1,6 +1,5 @@
 files:
   "/etc/php.d/redis.ini" :
-    test: '[ ! /etc/php.d/redis.ini ] && echo "Redis connection not configured"'
     mode: "000644"
     owner: root
     group: root
@@ -8,18 +7,21 @@ files:
       extension=redis.so
       session.save_handler = redis
       session.save_path = "tcp://sessionstore.wo5usz.0001.usw2.cache.amazonaws.com:6379"
+	test: '[ ! /etc/php.d/redis.ini ] && echo "Redis connection not configured"'
 
 commands:
   01download_redis:
-    test: '[ ! /tmp/phpredis.zip ] && echo "Redis not downloaded"'
     command: wget https://github.com/nicolasff/phpredis/zipball/master -O phpredis.zip
-    ignoreErrors: true
     cwd: /tmp
+    test: '[ ! /tmp/phpredis.zip ] && echo "Redis not downloaded"'
+    ignoreErrors: true
+
   02install_redis:
-    test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place"'
-    command: unzip -o phpredis.zip;cd nicolasff-phpredis-*;phpize; ./configure;make ; make install
-    ignoreErrors: true
+    command: unzip -o phpredis.zip;cd nicolasff-phpredis-*;phpize; ./configure;make ; make install &> /var/www/html/redis_install.log
     cwd: /tmp
-  04restart_server:
+    test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place"'
+    ignoreErrors: true
+
+  03restart_server:
     command: apachectl restart
     cwd: /tmp
