Just another try 90005

--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -17,7 +17,7 @@ commands:
     ignoreErrors: true
 
   02install_redis:
-    command: unzip -o phpredis.zip;cd nicolasff-phpredis-*;phpize; ./configure;make ; make install &> /var/www/html/redis_install.log
+    command: unzip -o phpredis.zip &> /var/www/html/redis_install.log;cd nicolasff-phpredis-*;phpize; ./configure &>> /var/www/html/redis_install.log;make &>> /var/www/html/redis_install.log; make install &>> /var/www/html/redis_install.log
     cwd: /tmp
     test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place"'
     ignoreErrors: true
