--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -8,6 +8,12 @@ files:
       session.save_handler = redis
       session.save_path = "tcp://sessionstore.wo5usz.0001.usw2.cache.amazonaws.com:6379"
     test: '[ ! /etc/php.d/redis.ini ] && echo "Redis connection not configured"'
+    "/tmp/redis_install.log" :
+    mode: "000644"
+    owner: root
+    group: root
+    content: |
+      Hey! Who is there?!!
 
 commands:
   01download_redis:
