--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -23,10 +23,14 @@ commands:
     ignoreErrors: true
 
   02install_redis:
-    command: unzip -o phpredis.zip &> /tmp/redis_install.log;cd nicolasff-phpredis-*;phpize; ./configure &>> /tmp/redis_install.log;make &>> /tmp/redis_install.log; make install &>> /tmp/redis_install.log
+    command: unzip -o phpredis.zip > /tmp/redis_install.log 2>&1;cd nicolasff-phpredis-*;phpize; ./configure >> /tmp/redis_install.log 2>&1;make >> /tmp/redis_install.log 2>&1; make install >> /tmp/redis_install.log 2>&1
     cwd: /tmp
     test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place"'
 
   03restart_server:
     command: apachectl restart
     cwd: /tmp
+
+container_commands:
+  01make_link:
+    command: ln -s /tmp/redis_install.log /var/www/html/redis_install.log
