Just another try 9011

--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -23,7 +23,7 @@ commands:
     ignoreErrors: true
 
   02install_redis:
-    command: unzip -o phpredis.zip > /tmp/redis_install.log 2>&1;cd nicolasff-phpredis-*;phpize; ./configure >> /tmp/redis_install.log 2>&1;make >> /tmp/redis_install.log 2>&1; make install >> /tmp/redis_install.log 2>&1
+    command: unzip -o phpredis.zip > /tmp/redis_install.log ; cd phpredis-phpredis-* ; phpize ; ./configure >> /tmp/redis_install.log ; make >> /tmp/redis_install.log ; make install >> /tmp/redis_install.log
     cwd: /tmp
     test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place"'
 
@@ -33,4 +33,4 @@ commands:
 
 container_commands:
   01make_link:
-    command: ln -s /tmp/redis_install.log /var/www/html/redis_install.log
+    command: ln -s /tmp/redis_install.log /var/app/current/redis_install.log
