--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -8,29 +8,29 @@ files:
       session.save_handler = redis
       session.save_path = "tcp://sessionstore.wo5usz.0001.usw2.cache.amazonaws.com:6379"
     test: '[ ! /etc/php.d/redis.ini ] && echo "Redis connection not configured"'
-  "/tmp/redis_install.log" :
-    mode: "000644"
-    owner: root
-    group: root
-    content: |
-      'Hey! Who is there?!!'
+
+packages:
+  yum:
+    php-devel: []
+    gcc: []
+    git: []
 
 commands:
   01download_redis:
-    command: wget https://github.com/nicolasff/phpredis/zipball/master -O phpredis.zip
+    command: "wget https://github.com/nicolasff/phpredis/zipball/master -O phpredis.zip"
     cwd: /tmp
     test: '[ ! /tmp/phpredis.zip ] && echo "Redis not downloaded"'
     ignoreErrors: true
 
   02install_redis:
-    command: unzip -o phpredis.zip > /tmp/redis_install.log ; cd phpredis-phpredis-* ; phpize ; ./configure >> /tmp/redis_install.log ; make >> /tmp/redis_install.log ; make install >> /tmp/redis_install.log
+    command: "unzip -o phpredis.zip > /tmp/redis_install.log ; cd phpredis-phpredis-* ; phpize ; ./configure >> /tmp/redis_install.log ; make >> /tmp/redis_install.log ; make install >> /tmp/redis_install.log"
     cwd: /tmp
     test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place"'
 
   03restart_server:
-    command: apachectl restart
+    command: "apachectl restart"
     cwd: /tmp
 
 container_commands:
-  01make_link:
-    command: ln -s /tmp/redis_install.log /var/app/current/redis_install.log
+  01make_log_link:
+    command: "ln -s /tmp/redis_install.log /var/app/current/redis_install.log"
