Just another try 9015

--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -23,14 +23,10 @@ commands:
     ignoreErrors: true
 
   02install_redis:
-    command: "unzip -o phpredis.zip > /tmp/redis_install.log ; cd phpredis-phpredis-* ; phpize ; ./configure >> /tmp/redis_install.log ; make >> /tmp/redis_install.log ; make install >> /tmp/redis_install.log"
+    command: "unzip -o phpredis.zip ; cd phpredis-phpredis-* ; phpize ; ./configure ; make ; make install"
     cwd: /tmp
     test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place"'
 
   03restart_server:
     command: "apachectl restart"
     cwd: /tmp
-
-container_commands:
-  01make_log_link:
-    command: "ln -s /tmp/redis_install.log /var/app/current/redis_install.log"
