Just another try 9016

--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -7,7 +7,7 @@ files:
       extension=redis.so
       session.save_handler = redis
       session.save_path = "tcp://sessionstore.wo5usz.0001.usw2.cache.amazonaws.com:6379"
-    test: '[ ! /etc/php.d/redis.ini ] && echo "Redis connection not configured"'
+    test: '[ ! /etc/php.d/redis.ini ] && echo "Redis connection not configured" >> /var/log/eb-activity.log'
 
 packages:
   yum:
@@ -19,13 +19,13 @@ commands:
   01download_redis:
     command: "wget https://github.com/nicolasff/phpredis/zipball/master -O phpredis.zip"
     cwd: /tmp
-    test: '[ ! /tmp/phpredis.zip ] && echo "Redis not downloaded"'
+    test: '[ ! /tmp/phpredis.zip ] && echo "Redis not downloaded" >> /var/log/eb-activity.log'
     ignoreErrors: true
 
   02install_redis:
-    command: "unzip -o phpredis.zip ; cd phpredis-phpredis-* ; phpize ; ./configure ; make ; make install"
+    command: "unzip -o phpredis.zip && cd phpredis-phpredis-* && phpize && ./configure && make && make install"
     cwd: /tmp
-    test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place"'
+    test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place" >> /var/log/eb-activity.log'
 
   03restart_server:
     command: "apachectl restart"
