Just another try 9017

--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -23,7 +23,7 @@ commands:
     ignoreErrors: true
 
   02install_redis:
-    command: "unzip -o phpredis.zip && cd phpredis-phpredis-* && phpize && ./configure && make && make install"
+    command: "unzip -o phpredis.zip && cd phpredis-phpredis-* && phpize && ./configure && make && make install && ln -s /usr/lib64/php/modules/redis.so /usr/lib64/php/5.6/modules/redis.so"
     cwd: /tmp
     test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place" >> /var/log/eb-activity.log'
 
