--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -1,3 +1,5 @@
+# Errors get logged to /var/log/cfn-init.log. See Also /var/log/eb-tools.log
+
 files:
   "/etc/php.d/redis.ini" :
     mode: "000644"
@@ -12,6 +14,7 @@ files:
 packages:
   yum:
     php56-devel: []
+    make: []
     gcc: []
     git: []
 
@@ -20,12 +23,10 @@ commands:
     command: "wget https://github.com/nicolasff/phpredis/zipball/master -O phpredis.zip"
     cwd: /tmp
     test: '[ ! /tmp/phpredis.zip ] && echo "Redis not downloaded" >> /var/log/eb-activity.log'
-    ignoreErrors: true
 
   02install_redis:
-    command: "unzip -o phpredis.zip && cd phpredis-phpredis-* && phpize && ./configure && make && make install && ln -s /usr/lib64/php/modules/redis.so /usr/lib64/php/5.6/modules/redis.so"
+    command: "unzip -o /tmp/phpredis.zip && cd /tmp/phpredis-phpredis-* && phpize && ./configure && make && make install"
     cwd: /tmp
-    test: '[ ! /usr/lib64/php/modules/redis.so ] && echo "Redis module is not in place" >> /var/log/eb-activity.log'
 
   03restart_server:
     command: "apachectl restart"
