Just another try 9019

--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -16,13 +16,13 @@ packages:
     php56-devel: []
     make: []
     gcc: []
+    wget: []
     git: []
 
 commands:
   01download_redis:
-    command: "wget https://github.com/nicolasff/phpredis/zipball/master -O phpredis.zip"
+    command: "wget https://github.com/nicolasff/phpredis/zipball/master -O /tmp/phpredis.zip"
     cwd: /tmp
-    test: '[ ! /tmp/phpredis.zip ] && echo "Redis not downloaded" >> /var/log/eb-activity.log'
 
   02install_redis:
     command: "unzip -o /tmp/phpredis.zip && cd /tmp/phpredis-phpredis-* && phpize && ./configure && make && make install"
