Just another try 9020

--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -8,8 +8,7 @@ files:
     content: |
       extension=redis.so
       session.save_handler = redis
-      session.save_path = "tcp://sessionstore.wo5usz.0001.usw2.cache.amazonaws.com:6379"
-    test: '[ ! /etc/php.d/redis.ini ] && echo "Redis connection not configured" >> /var/log/eb-activity.log'
+      session.save_path = "tcp://sessions.wo5usz.0001.usw2.cache.amazonaws.com:6379"
 
 packages:
   yum:
@@ -25,7 +24,7 @@ commands:
     cwd: /tmp
 
   02install_redis:
-    command: "unzip -o /tmp/phpredis.zip && cd /tmp/phpredis-phpredis-* && phpize && ./configure && make && make install"
+    command: "pecl install igbinary && unzip -o /tmp/phpredis.zip && cd /tmp/phpredis-phpredis-* && phpize && ./configure --enable-redis-igbinary && make && make install"
     cwd: /tmp
 
   03restart_server:
