Just another try 9023

--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -1,5 +1,3 @@
-# Errors get logged to /var/log/cfn-init.log. See Also /var/log/eb-tools.log
-
 files:
   "/etc/php.d/redis.ini" :
     mode: "000644"
@@ -8,7 +6,7 @@ files:
     content: |
       extension=redis.so
       session.save_handler = redis
-      session.save_path = "tcp://sessions.wo5usz.0001.usw2.cache.amazonaws.com:6379"
+      session.save_path = "tcp://letspray.wo5usz.0001.usw2.cache.amazonaws.com:6379"
 
 packages:
   yum:
@@ -17,6 +15,8 @@ packages:
     gcc: []
     wget: []
     git: []
+  pecl:
+    igbinary: []
 
 commands:
   01download_redis:
@@ -24,7 +24,7 @@ commands:
     cwd: /tmp
 
   02install_redis:
-    command: "cp /usr/include/php/ext/igbinary /usr/local/include/php/ext/igbinary -fr && unzip -o /tmp/phpredis.zip && cd /tmp/phpredis-phpredis-* && phpize && ./configure --enable-redis-igbinary && make && make install"
+    command: "unzip -o /tmp/phpredis.zip && cd /tmp/phpredis-phpredis-* && phpize && su ./configure --enable-redis-igbinary && su make && su make install"
     cwd: /tmp
 
   03restart_server:
