Just another try 9026

--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -24,7 +24,7 @@ commands:
     cwd: /tmp
 
   02install_redis:
-    command: "unzip -o /tmp/phpredis.zip ; cd /tmp/phpredis-phpredis-* ; phpize ; ./configure --enable-redis-igbinary ; make ; make install"
+    command: "unzip -o /tmp/phpredis.zip ; cd /tmp/phpredis-phpredis-* ; phpize ; sudo ./configure --enable-redis-igbinary ; make ; make install"
     cwd: /tmp
 
   03restart_server:
