--- a/.ebextensions/redissessions.config
+++ b/.ebextensions/redissessions.config
@@ -6,8 +6,8 @@ files:
     content: |
       extension=redis.so
       session.save_handler = redis
-      session.save_path = "tcp://letspray.wo5usz.0001.usw2.cache.amazonaws.com:6379"
-    test: '[ ! /etc/php.d/redis.ini ] && echo "Redis connection not configured"'
+      session.save_path = "tcp://${REDIS-HOST}:${REDIS-PORT}"
+    test: '[ ! /etc/php.d/redis.ini ] && echo "Redis connection is not configured"'
 
 packages:
   yum:
@@ -20,13 +20,13 @@ commands:
   01download_redis:
     command: "wget https://github.com/nicolasff/phpredis/zipball/master -O /tmp/phpredis.zip"
     cwd: /tmp
-    test: '[ ! /tmp/phpredis.zip ] && echo "Redis not downloaded"'
+    test: '[ ! /tmp/phpredis.zip ] && echo "Redis is not downloaded"'
 
   02install_redis:
     command: "unzip -o /tmp/phpredis.zip ; cd /tmp/phpredis-phpredis-* ; phpize ; ./configure ; make ; make install"
     cwd: /tmp
     test: '[ ! /usr/lib64/php/5.6/modules/redis.so ] && echo "Redis module is not in place"'
 
-  03restart_server:
+  03restart_apache_server:
     command: "apachectl restart"
     cwd: /tmp
